# vork

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  ISSUE_DIAGNOSIS.md  LICENSE  README.md  START.md  index.html  install.sh  system7-audit-prompt.md  vork
docs/: VISION_SETUP.md
presets/: README.md  qwen3-14b-instant.toml  qwen3-14b-large-context.toml  qwen3-30b-balanced.toml  qwen3-30b-extended.toml  qwen3-30b-fast.toml  qwen3-30b-max-gpu.toml
scripts/: README.md  check-model.sh  setup-vision-2b.sh
src/: config.rs  main.rs
src/agents/: mod.rs
src/backends/: llamacpp.rs  mod.rs  ollama.rs
src/commands/: agents.rs  ask.rs  benchmark.rs  chat.rs  config.rs  exec.rs  install.rs  list.rs  mod.rs  presets.rs  remove.rs  resume.rs  run.rs  setup.rs  status.rs  tui.rs
src/llm/: approval.rs  client.rs  conversation.rs  mod.rs  server.rs  session.rs  tools.rs
