[package]
name = "vork"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool for managing local LLMs"
license = "MIT"

[[bin]]
name = "vork"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
dirs = "5.0"
colored = "2.1"
indicatif = "0.17"
async-trait = "0.1"
shellexpand = "3.1"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.28"
ratatui = "0.29"

[dev-dependencies]
tempfile = "3.13"
